--- a/. devcontainer/Dockerfile
+++ b/. devcontainer/Dockerfile
@@ -1,7 +1,7 @@
 FROM mcr.microsoft.com/devcontainers/python:3.11
 
-# Atualiza pacotes base e instala dependências úteis
+# Instala dependências básicas
 RUN apt-get update && apt-get install -y curl unzip
 
-# Garante que ~/.local/bin (onde pip --user instala) esteja no PATH
-ENV PATH="${PATH}:/root/.local/bin"
+# Instala localstack e boto3 globalmente (sem --user)
+RUN pip install localstack boto3
