--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,24 @@
-version: "3.8"
+version: '3.8'
 
 services:
   localstack:
-    image: localstack/localstack
-    ports:
-      - "4566:4566"
+    image: localstack/localstack:latest
     environment:
       - SERVICES=s3
       - DEBUG=1
-    volumes:
-      - "/var/run/docker.sock:/var/run/docker.sock"
+      - DATA_DIR=/tmp/localstack/data
+    ports:
+      - "4566:4566"
+
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile.koyeb
+    depends_on:
+      - localstack
+    environment:
+      - AWS_ACCESS_KEY_ID=test
+      - AWS_SECRET_ACCESS_KEY=test
+      - AWS_DEFAULT_REGION=us-east-1
+      - LOCALSTACK_HOST=localstack
+    command: ["python", "s3.py"]
